# qtPaintExample

./: CMakeLists.txt
src/: MainWindow.cpp  MainWindow.h  main.cpp
